--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ base64 = "0.13"
 argon2 = "0.5"
 rand = "0.8.5"
 rand_distr = "0.4.3"
+pct-str = "2.0.0"
 
 # axum = "0.5.17"
 # tokio = { version = "1.28.2", features = ["full"] }
