--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ argon2 = "0.5"
 rand = "0.8.5"
 rand_distr = "0.4.3"
 pct-str = "2.0.0"
+blake3 = "1.5.0"
 
 # axum = "0.5.17"
 # tokio = { version = "1.28.2", features = ["full"] }
