--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ rand_distr = "0.4.3"
 pct-str = "2.0.0"
 # blake3 = "1.5.0"
 blake3 = { path = "../src/BLAKE3" }
+strum = { version = "0.20", features = ["derive"] }
 
 # axum = "0.5.17"
 # tokio = { version = "1.28.2", features = ["full"] }
