--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ serde_json= "1.0"
 chrono = { version = "0.4.30", default-features = false, features = ["std", "alloc", "clock"] }
 # 0.6's (indirect) dependency phf_codegen can't be handled with cargo 1.46.0
 # [Does not matter any more though]
-#chrono-tz = "0.5.3"
+chrono-tz = "0.5"
 lazy_static = "1.4.0"
 itertools = "0.10"
 imagesize = "0.12"
