--- a/libs/ahtml_html/Cargo.toml
+++ b/libs/ahtml_html/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 authors = ["Christian Jaeger <ch@christianjaeger.ch>"]
 license = "MIT OR Apache-2.0"
+description = "A metainfo database for HTML abstractions"
+repository = "https://github.com/pflanze/website"
 
 [dependencies]
 anyhow = "1.0.14"
