--- a/libs/chj-util/Cargo.toml
+++ b/libs/chj-util/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 authors = ["Christian Jaeger <ch@christianjaeger.ch>"]
 license = "MIT OR Apache-2.0"
 description = "A collection of utilities shared amongst my crates"
+repository = "https://github.com/pflanze/website"
 
 [dependencies]
 backtrace = "0.3"
