--- a/libs/chj-util/Cargo.toml
+++ b/libs/chj-util/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 authors = ["Christian Jaeger <ch@christianjaeger.ch>"]
 license = "MIT OR Apache-2.0"
-description = "A collection of utilities shared amongst my crates"
+description = "A collection of utilities shared between my crates"
 repository = "https://github.com/pflanze/website"
 
 [dependencies]
